	    advanced mode.
	    Closes bug 12
	  - Allow for setting a new branch default - Automatic username
	    prefix. This option is only visible in the domain/branch
	    details page if 'Automaticly generate username' is set to
	    true. Required a new attribute to the phpQLAdminBranch
	    objectclass. The OID is:
		userNamePrefix          1.3.6.1.4.1.8767.3.2.4.13

	Misc changes

phpQLAdmin 2.0.14 Release (jun 12 2003)
	Bug fixes
	  - Link to control_edit_attribute.php should include the MX host
	  - If we can't validate administrator, don't die with LDAP error,
	    return false (ie, admin is not valid).
	  - Maximum users for domain is just that 'FOR DOMAIN'! Not for
	    the whole three! I looked in the root dn/namingContexts for
	    this value, which is wrong!
	  - Don't force create a homedirectory if we're creating a 'Mail
	    account'. We re-use the mailMessageStore.
	    + We also force [ug]idNumber by re-using the forwarding account
	      numbers. That is, Mail and Forwarding accounts ALL use the
	      same uid and gid numbers. The reason for this is that Qmail
	      won't accept mails for a user if they don't have a uid/gid
	      number between a specific range (compile time). And we can't
	      add the uid/gid numbers if we don't have a homeDirectory
	      (schema enforced).
	  - When changing a QmailLDAP/Controls object, depending on where
	    we where called from (from the domain details - remove/add
	    rcpthost), redirect to original page (control_detail.php or
	    domain_detail.php depending).
	  - Only create the principal in the example create user script
	    if it is a {KERBEROS} password.
	  - If we're NOT running in advanced mode, and we're creating a
	    'Mail account' user, we should have the same values for homeDirectory
	    and mailMessageStore. This is done by using the user_generate_mailstore()
	    function instead of the (expected) user_generate_homedir().
	  * When trying to save: