@@ -1,6 +1,6 @@
 <?php
 // configuration file
-// $Id: config.inc.CHANGE_ME,v 2.31 2003-06-20 08:52:27 turbo Exp $
+// $Id: config.inc.CHANGE_ME,v 2.32 2003-06-21 20:19:47 turbo Exp $
 //
 // IMPORTANT:
 // If adding or removing defines from this file,
@@ -53,6 +53,14 @@ pql_define("PQL_GLOB_HOST","localhost;389;ou=QmailLDAP,dc=example,dc=com");
 // what subtree is the groups located?
 // -> Do not add a comma after this, not needed.
 //pql_define("PQL_GLOB_SUBTREE_GROUPS", "ou=Groups");
+
+// ----------------------------
+// PQL_GLOB_EZMLM_USER
+// If you're using the ezmlm manager, you might have to configure
+// what user ezmlm is running as. That is, who "own's" (ie, the
+// directories) the mailinglist. This is usually 'alias', as in
+// '~alias/.qmail-LISTNAME' but can also be 'vmail'...
+pql_define("PQL_GLOB_EZMLM_USER", "alias");
 
 // ----------------------------
 // mail(message)store generation
